--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vinebook",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "v10.16.3" 
+  },
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
